[package]

name = "allegro_ttf"
version = "0.0.38" #auto
license = "Zlib"
repository = "https://github.com/SiegeLord/RustAllegro"
documentation = "http://siegelord.github.io/RustAllegro/doc/allegro_ttf/index.html"
keywords = ["text", "graphics", "ttf", "font"]
authors = [ "SiegeLord <slabode@aim.com>" ]
description = "Allegro 5 ttf addon Rust wrapper"
categories = ["rendering::data-formats"]

[lib]

name = "allegro_ttf"
path = "src/lib.rs"

[features]

link_none = ["allegro_ttf-sys/link_none"]
link_debug = ["allegro_ttf-sys/link_debug"]
link_static = ["allegro_ttf-sys/link_static"]

[dependencies]

libc = "0.2"

[dependencies.allegro]

path = "../allegro"
version = "=0.0.38" #auto

[dependencies.allegro_font]

path = "../allegro_font"
version = "=0.0.38" #auto

[dependencies.allegro_ttf-sys]

path = "../allegro_ttf-sys"
version = "=0.0.38" #auto

[dependencies.allegro_util]

path = "../allegro_util"
version = "=0.0.38" #auto
